arreglada algunas respuestas

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         </div>
     </header>
     <section id="hero">
-        <h2>¿Realmente sabe de manzanas?</h2>
-        <button class="empezar">Realizar test</button>
+        <div class="titulo">
+            <h2>¿Realmente sabe de manzanas?</h2>
+            <button class="empezar">Realizar test</button>
+        </div>
         <div class="container">
             <div id="quiz"></div>
             <div id="result" class="result"></div>
