--- a/index.html
+++ b/index.html
@@ -3,39 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="manifest" href="site.webmanifest">
+   <link rel="stylesheet" href="style.css">
     <title>AppleRinco</title>
 </head>
 <body>
-    <header class="arriba">
-        <div class="arriba">
+    <header class="header">
+        <div class="contenedor">
             <p class="logo">AppleRinco</p>
             <nav>
+                <ul>
+                    <li><a href="default.asp">Home</a></li>
+                    <li><a href="news.asp">News</a></li>
+                    <li><a href="contact.asp">Contact</a></li>
+                    <li><a href="about.asp">About</a></li>
+                  </ul>
             </nav>
         </div>
     </header>
     <section id="hero">
-        <div class="titulo">
-            <h2>¿Realmente sabe de manzanas?</h2>
-            <button class="empezar">Realizar test</button>
+        <h2>Bienvenido a AppleRinco</h2>
+    </section>
+    <section id="caja">
+        <p class="texto">
+            Somos una empresa  dedicada a ofrecer las manzanas más frescas y deliciosas cultivadas con pasión y dedicación. 
+            Nuestra empresa se enorgullece de llevar la tradición de la agricultura a un nivel superior, combinando métodos de cultivo sostenibles con una variedad única de manzanas que deleitarán tu paladar. 
+            Estamos comprometidos con la calidad, la frescura y la sostenibilidad en cada paso de nuestro proceso de producción.
+        </p>
+    </section>
+    <section class="parallax1">
+        <div class="parallax-inner">
+            <h2>Nuestra misión</h2>
         </div>
-        <div class="container">
-            <div id="quiz"></div>
-            <div id="result" class="result"></div>
-            <button id="submit" class="button">Siguiente</button>
-            <button id="retry" class="button hide">Reintentar</button>
+    </section>
+    <section id="caja">
+        <p class="texto">
+            Nuestra misión es ofrecer las manzanas más frescas y deliciosas cultivadas con pasión y dedicación. 
+            Nuestra empresa se enorgullece de llevar la tradición de la agricultura a un nivel superior, combinando métodos de cultivo sostenibles con una variedad única de manzanas que deleitarán tu paladar. 
+            Estamos comprometidos con la calidad, la frescura y la sostenibilidad en cada paso de nuestro proceso de producción.
+        </p>
+    </section>
+    <section class="parallax2">
+        <div class="parallax-inner">
+            <h2>Joder esto es cine</h2>
+
+        </div>
+    </section>
+    <section id="caja">
+        <p class="texto">
+            Joder me has convencido esto es definitivamente cine
+        </p>
+    </section>
+    <section class="parallax3">
+        <div class="parallax-inner">
+            <h2>Haz nuestro quiz de manzanas</h2>
+            <a href="manzanas/manzanas.html">
+                <button>Juega ya</button>
+            </a>
         </div>
     </section>
     <footer>
-    <div class="abajo">
+    <div class="container">
         <p>&copy; GetsuCompany</p>
     </div>
 </footer>
-<script src="script.js"></script>
 </body>
 </html>
