--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <p class="logo">AppleRinco</p>
             <nav>
                 <ul>
-                    <li><a href="default.asp">Home</a></li>
-                    <li><a href="news.asp">News</a></li>
-                    <li><a href="contact.asp">Contact</a></li>
-                    <li><a href="about.asp">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="manzanas/manzanas.html">Quiz</a></li>
+                    <li><a href="">Contacto</a></li>
+                    <li><a href="">Acerca de</a></li>
                   </ul>
             </nav>
         </div>
