--- a/manzanas/manzanas.html
+++ b/manzanas/manzanas.html
@@ -12,10 +12,16 @@
     <title>AppleRinco</title>
 </head>
 <body>
-    <header class="arriba">
-        <div class="arriba">
+    <header class="header">
+        <div class="contenedor">
             <p class="logo">AppleRinco</p>
             <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="manzanas/manzanas.html">Quiz</a></li>
+                    <li><a href="">Contacto</a></li>
+                    <li><a href="">Acerca de</a></li>
+                  </ul>
             </nav>
         </div>
     </header>
