--- a/manzanas/manzanas.html
+++ b/manzanas/manzanas.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="manzanas/manzanas.html">Quiz</a></li>
+                    <li><a href="manzanas.html">Quiz</a></li>
                     <li><a href="">Contacto</a></li>
                     <li><a href="">Acerca de</a></li>
                   </ul>
